docs: finalize consolidated refactoring plan with all 7 phases