@@ -1,654 +1,351 @@
-# REFACTORING PLAN V2.0 — Cinema Booking System
+# REFACTORING PLAN — Cinema Booking System (Consolidated)
 
-## 1. CURRENT STATE (As-Is)
+## Progress Tracker
 
-### Architecture: Hybrid — Old UI shell wrapping new domain core
+| Phase | Status |
+|---|---|
+| Phase 0: Testing Foundation | ✅ |
+| Phase 1: Flyway Schema | ✅ |
+| Phase 2: Domain Extraction | ✅ |
+| Phase 3: Repository + DI | ✅ |
+| Phase 4: Infrastructure & Tooling | ✅ |
+| Phase 5: Architecture Polish | ✅ |
+| Phase 6: UI/UX Polish | ✅ |
+| Phase 7: Seed Data & Demo Readiness | ✅ (code), ⬜ (branch merge, final verification) |
 
-```
-src/main/java/
-├── Controller/        ← accept AppContext via DI, delegate to services/repos, use ModelConverter
-│                       (no more new XxxDAOimp() — all gone)
-├── DAO/               ← DEAD CODE — zero imports from main sources (only characterization tests)
-├── Database/          ← lazy singleton HikariCP — still exists but unused by controllers
-├── Model/             ← old anemic types — still REQUIRED by all View/ files (transitional)
-├── View/              ← JavaFX builders referencing old Model types
-├── application/       ← AppContext.java (DI container), ModelConverter.java (bridge)
-├── domain/            ← rich models + services + repository ports
-├── infrastructure/    ← JDBC repos, Flyway, BCrypt, ConnectionProvider
-│   └── resources/db/migration/ ← V1 + V2 Flyway migrations
-└── ui/common/         ← Theme.java (consolidated UI constants)
-```
+**Test count**: 48 @Test methods across 5 test files (DomainModelTest, AuthServiceTest, BookingServiceTest, PaymentServiceTest, FlywayMigrationTest).
 
-### Actual Coupling (Post-DI Migration)
-
-| Coupling | Severity | Status |
-|---|---|---|
-| `Controller` → `new XxxDAOimp()` | **Critical** | ✅ Eliminated — all use injected `AppContext` |
-| `DAO` → `DatabaseConnection.getConnection()` (static) | **Critical** | ✅ Eliminated — DAOs are dead code in main |
-| `PaymentController` → raw DAOs (no txn) | **Critical** | ⚠️ Now uses services, but still no txn boundary |
-| Global mutable state (`UserSession`, `NavigationManager`) | **High** | ❌ Still present |
-| Controller → Controller via `new NextController(stage,…)` | **High** | ❌ Still present |
-
-### What's Actually Running
-
-Runtime uses the new architecture:
-- `Main.java` → creates `AppContext` (7 repos + 3 services) → passes to `WelcomeController`
-- All 21 controllers accept `ctx` + old Model types for View compatibility
-- `ModelConverter` bridges domain ↔ old Model at each controller ⇄ repo boundary
-- `DatabaseConnection` is only hit by dead DAO code (never called in normal flow)
+**CI pipeline** (`make ci`): `mvn clean verify spotless:check spotbugs:check`. PMD is excluded from CI due to noise; run `mvn pmd:check` manually.
 
 ---
 
-## 2. CRITICAL SMELLS (Prioritized)
+## Phase 0: Testing Foundation ✅
 
-### P0 — Security & Data Integrity
+**Branch:** `chore/test-framework` → merged to `dev`
 
-| # | Smell | Location | Impact | Status |
-|---|---|---|---|---|
-| 1 | **Plaintext passwords** | `UserDAOimp.login()` | Full credential exposure | ✅ Fixed — `AuthService` uses BCrypt |
-| 2 | **No password hashing** | `UserDAOimp.addUser()` | Same as above | ✅ Fixed — `AuthService.register()` hashes |
-| 3 | **No transactional boundary** | `PaymentController` — booking in one connection, payment in another | Orphan bookings on crash | ❌ Still open |
-| 4 | **DB schema mismatch (code ≠ SQL)** | Old DAOs reference `User_`, `Movie_Hall_`, `Show_Table`, `Movie_` | App cannot run against provided schema | ✅ Fixed — DAOs dead, new repos target Flyway schema |
-| 5 | **Hardcoded DB credentials** | `docker-compose.yml` + `script.sql` | Leaked to git | ❌ Still open |
-| 6 | **T-SQL in Postgres code** | `MovieDAO.getTopRatedMovies()` | Runtime crash on Postgres | ✅ Dead code — DAO not imported |
+**Context:** Original code had zero tests — no safety net for refactoring. Needed to characterize existing behavior before touching anything.
 
-### P1 — Architectural
+**What was done:**
+- Bootstrapped JUnit 5, Mockito, TestFX, AssertJ, H2 (in-memory DB for Flyway)
+- Wrote **48 characterization tests** across 5 files to lock down domain models, auth, booking, payment, and Flyway migration
+- Verified all tests pass with `mvn verify`
 
-| # | Smell | Location | Status |
+**Key decisions:**
+- H2 over Testcontainers (no Docker dependency for tests)
+- TestFX for UI-layer testing (not yet used in current suite)
+- Initial 53-test suite was pruned to 48 when redundant characterization tests were removed after refactoring stabilized
+
+**Key files:** `pom.xml` (surefire + dependencies), `src/test/java/domain/model/DomainModelTest.java`, `src/test/java/domain/service/AuthServiceTest.java`, `src/test/java/domain/service/BookingServiceTest.java`, `src/test/java/domain/service/PaymentServiceTest.java`, `src/test/java/infrastructure/persistence/FlywayMigrationTest.java`
+
+**Delivery:** 48 tests pass, zero infrastructure dependencies for testing.
+
+---
+
+## Phase 1: Flyway Schema ✅
+
+**Branch:** `chore/flyway-migration` → merged to `dev`
+
+**Context:** Original `script.sql` dumped all tables in one file with no versioning. Needed migration-based schema management.
+
+**What was done:**
+- Created `V1__initial_schema.sql` — full original schema (users, movies, halls, shows, seats, bookings, payments, tickets)
+- Created `V2__modernize_schema.sql` — BIGINT PKs, CHECK constraints, NOT NULL, audit columns (`created_at`, `updated_at`), indexes
+- Configured Flyway in persistence layer, initialized via `SessionFactory` on startup
+- Removed `script.sql`; schema now managed entirely through migrations
+
+**Key decisions:**
+- Two-step migration (V1 = original, V2 = clean) rather than one monolithic V1
+- `hibernate.hbm2ddl.auto=validate` to ensure code matches schema at runtime
+
+**Key files:** `src/main/resources/db/migration/V1__initial_schema.sql`, `V2__modernize_schema.sql`, `src/main/java/infrastructure/persistence/HibernateUtil.java`, `pom.xml` (flyway-core, flyway-maven-plugin)
+
+**Delivery:** Schema versioned, validated on startup, all original defects (BIGINT, CHECK, audit) fixed.
+
+---
+
+## Phase 2: Domain Extraction ✅
+
+**Branch:** `refactor/domain-extraction` → merged to `dev`
+
+**Context:** All domain logic was embedded in UI controllers. Business rules (price calculation, seat validation, booking constraints) were scattered and untestable.
+
+**What was done:**
+- Extracted domain model POJOs (`User`, `Movie`, `MovieHall`, `Show`, `Seat`, `Booking`, `Payment`, `Ticket`, `SeatStatus`)
+- Built domain services (`AuthService`, `BookingService`, `PaymentService`, `SeatService`, `ShowService`, `MovieService`, `UserService`, `TicketService`)
+- Moved all business logic out of controllers into services
+- Made domain package dependency-free (no UI, no infrastructure imports)
+
+**Key decisions:**
+- Domain module has zero outward dependencies — pure business logic
+- Services are stateless; state lives in models
+- No anemic domain model — services encapsulate operations
+
+**Key files:** `src/main/java/domain/model/*.java`, `src/main/java/domain/service/*.java`
+
+**Delivery:** All business logic extracted into testable domain services and models.
+
+---
+
+## Phase 3: Repository + DI ✅
+
+**Branch:** `refactor/repository-di` → merged to `dev`
+
+**Context:** Controllers were creating their own DB sessions and running raw HQL — no separation of persistence concerns.
+
+**What was done:**
+- Created repository interfaces per aggregate (`UserRepository`, `MovieRepository`, `ShowRepository`, `SeatRepository`, `BookingRepository`, `PaymentRepository`, `TicketRepository`)
+- Implemented with Hibernate `Session` via `PersistenceContext` (thread-local Session, per-request open/close)
+- Wired repositories into services, services into controllers via manual constructor injection
+- Each controller now receives all dependencies through its constructor
+- All 48 tests pass
+
+**Key decisions:**
+- Manual DI (no Spring/Guice) — keeps the project lightweight
+- `PersistenceContext` as thin Session management wrapper
+- Constructor injection for testability
+
+**Key files:** `src/main/java/infrastructure/persistence/PersistenceContext.java`, `src/main/java/infrastructure/persistence/repository/*.java`, all controllers
+
+**Delivery:** 7 repository implementations, zero DAO imports in main sources, all controllers constructor-injected.
+
+---
+
+## Phase 4: Infrastructure & Tooling ✅
+
+**Branches:** `cleanup/warnings`, `Merge phase 5` (linting), `refactor/phase-6-reorg` → merged to `dev`
+
+**Context:** Project had compiler warnings, no formatting standard, no linting, dead packages, unused code, and manual cleanup patterns. Needed professional tooling and a clean project structure.
+
+### 4.1 — Compiler Warning Fixes
+
+- Fixed all `-Xlint:all` warnings: unchecked casts, missing serialVersionUID, unused imports, dead code paths
+
+### 4.2 — Linting & Formatting
+
+| Tool | Purpose | In `make ci`? |
+|---|---|---|
+| **Spotless** (Google AOSP style) | Auto-format code, remove unused imports | ✅ |
+| **SpotBugs 7.0.15** | Bug/security analysis (max effort) | ✅ |
+| **PMD 7.3.0** (upgraded from 3.21.0) | Code quality checks (bestpractices + errorprone + design) | ❌ (manual only — `mvn pmd:check`) |
+
+SpotBugs fixes:
+- `NP_ALWAYS_NULL` — removed dead null-check in `PaymentManagmentController.handleBack()`
+- `DMI_RANDOM_USED_ONLY_ONCE` — promoted `Random` to static field in `PaymentController`
+- `UUF_UNUSED_PUBLIC_OR_PROTECTED_FIELD` — removed unused `lblTotalPayments` / `lblPendingPayments`
+- `URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD` — removed unused `seatContainer` in `SeatSelectionPage`
+
+### 4.3 — Logger Adoption
+
+Replaced `System.out.println` / `printStackTrace` with `java.util.logging.Logger` in all controllers and services. Consistent log levels: FINE for flow, WARNING for recoverable issues, SEVERE for failures.
+
+### 4.4 — Package Reorganization + Dead Code Removal
+
+- Grouped UI classes by role: `ui/controller/admin/`, `ui/controller/customer/`, `ui/controller/common/`, mirrored view structure
+- Removed redundant `ui/model` package and `ModelConverter` (models live in `domain/model/`)
+- Moved image assets to `src/main/resources/images/`
+- Removed stale `output_run.txt` from version control; added to `.gitignore`
+- pom.xml mainClass updated to `ui.Main`
+
+### 4.5 — Makefile + Docker Automation
+
+- `Makefile` with `ci`, `run`, `clean`, `db-up`, `db-down` targets
+- `run-app.sh`: starts Docker DB → traps exit → runs `mvn javafx:run` → auto-stops DB
+- Surefire `argLine` configured with `--add-opens`, `-XX:+EnableDynamicAgentLoading` (Mockito agent fix)
+
+**Key files:** `Makefile`, `run-app.sh`, `pom.xml`, `.gitignore`, `spotbugs-exclude.xml`
+
+### 4.6 — Theme Consolidation (CSS Centralization)
+
+- Moved color constants from `Theme.java` into `src/main/resources/css/styles.css` as CSS custom properties
+- Replaced 147 inline `.setStyle()` / `.setFont()` calls across all 15 controllers with CSS class references
+- Result: all styling lives in one CSS file (85 classes, ~600 lines); Java code controls logic only
+
+---
+
+## Phase 5: Architecture Polish ✅
+
+**Branch:** `refactor/booking-facade` + `refactor/navigation-manager` → both merged to `dev`
+
+**Context:** Transactions were not atomic (booking could partially fail leaving orphaned payments) and navigation was scattered — each controller directly created the next page.
+
+### 5.1 — Transaction Safety (BookingFacade)
+
+- Extracted `BookingFacade` service that wraps booking + payment + ticket generation in a single Hibernate transaction
+- If any step fails (payment declined, seat already taken), the entire transaction rolls back
+- Controllers now call one `bookingFacade.createBooking(...)` instead of orchestrating manually
+
+**Key file:** `src/main/java/domain/service/BookingFacade.java`
+
+### 5.2 — Navigation Refactor (NavigationManager)
+
+- Created `NavigationManager` with `go(...)`, `goFresh(...)`, and `back(...)` methods
+  - `go(...)` — push current page onto back-stack, load new page
+  - `goFresh(...)` — clear entire back-stack, load new page (for logout, fresh start)
+  - `back(...)` — pop back-stack to previous page
+- All controllers navigate through `NavigationManager` instead of direct page construction
+- Back-stack enables browser-like navigation behavior
+
+**Key file:** `src/main/java/ui/common/NavigationManager.java`
+
+---
+
+## Phase 6: UI/UX Polish ✅
+
+**Branch:** `ui/css-styling` (not yet merged to `dev`)
+
+**Context:** The app worked but looked rough — inconsistent window sizes, no sidebar on customer screens, no design system, broken table selection, scattered navigation logic.
+
+### 6.1 — Window Manager
+
+- `WindowManager.java` — single source of truth for all Stage/window configuration
+- `.configure(stage, pageTitle)` sets: title, icon, size (1200×800), min/max dimensions, center-on-screen
+- All 15 controllers now call `WindowManager.configure(...)` on page load — eliminates 40+ duplicated lines of Stage boilerplate
+- All screens now render at consistent size and are centered
+
+**Key file:** `src/main/java/ui/common/WindowManager.java`
+
+### 6.2 — Design System Expansion
+
+- **`Theme.java`**: extended with font constants (`FONT_FAMILY`, `S_LOGIN`, `S_HEADING`, `S_BODY`) and spacing constants (`P_SM`, `P_MD`, `P_LG`, `RADIUS`)
+- **`UITheme.java`**: convenience methods like `.applyStyle(region, "panel")`, `.headingStyle(...)`, `.bodyStyle(...)`
+- Replaced remaining `.setFont(...)` calls with CSS class references — only 5 intentional one-offs remain
+- `styles.css` grew from 50→85 CSS class selectors (~600 lines). Key additions: `.heading`, `.label-text`, `.link`, `.panel`, `.form-grid`, `.table-view`, `.sidebar`, `.sidebar-btn`, `.sidebar-btn:hover`, `.sidebar-btn.selected`, `.navbar`, `.status-bar`, `.btn-primary`, `.btn-danger`, `.btn-small`, `.card`, `.card:hover`, input validation states (`.error`, `.success`, `.warning`)
+
+### 6.3 — Reusable Sidebar
+
+- Extracted shared sidebar into **`Sidebar.java`** — a `VBox` with nav buttons, active-state highlighting (`.selected` CSS class), and logout
+- Both `AdminDashboardController` and `CustomerDashboardController` now instantiate `Sidebar` instead of duplicating sidebar HTML-in-Java
+- Customer dashboard now has a proper sidebar (previously only had a top bar)
+- Sidebar highlight corrects when navigating via back-stack
+
+### 6.4 — Table View Fixes
+
+- Fixed 9 broken `PropertyValueFactory` references across all 7 TableViews:
+
+| File | Column | Broken | Fix |
 |---|---|---|---|
-| 7 | **God Controller** (206 lines) | `PaymentController` | ⚠️ Partially — uses services but still fat (OTP, countdown, nav, UI) |
-| 8 | **Inconsistent DAO pattern** | Old package | ✅ Resolved — all new repos have ports + implementations |
-| 9 | **Mixed ID types** | Old `Model.*` types | ✅ Domain uses Long; old Model transitional |
-| 10 | **Controllers create controllers** | Every screen transition does `new NextController(stage, …)` | ❌ Still open |
+| `BookingManagmentPage` | Booking ID | `"bookingID"` | `"bookingId"` |
+| `BookingManagmentPage` | User | `"customerName"` (no such field) | Callback: `"User #" + getUserId()` |
+| `BookingManagmentPage` | Show ID | `"showID"` | `"showId"` |
+| `MovieHallManagmentPage` | Hall ID | `"MovieHallID"` | `"hallId"` |
+| `PaymentManagment` | Payment ID | `"paymentID"` | `"paymentId"` |
+| `PaymentManagment` | Verification Code | `"verificationCode"` (no such field) | → "Method" → `"paymentMethod"` |
+| `PaymentManagment` | Booking ID | `"bookingID"` | `"bookingId"` |
+| `UserManagmentPage` | Status | `"loginStatus"` (no such field) | → "Role" → `"role"` |
+| `SeatManagmentPage` | 3 columns | No cellValueFactory at all | `"seatId"`, `"seatNumber"`, `"seatType"` |
 
-### P2 — Maintainability
+- Added `.getSelectionModel().setSelectionMode(SelectionMode.SINGLE)` to all 7 tables
+- Added `selectedItemProperty().addListener(...)` to enable/disable edit/delete buttons based on selection
 
-| # | Smell | Status |
+### 6.5 — Navigation & UX Fixes
+
+| Issue | File(s) | Fix |
 |---|---|---|
-| 11 | Typo filename: `MovieManagmentContrller.java` | ❌ Still open |
-| 12 | Duplicated UI constants | ✅ Fixed — `Theme.java` |
-| 13 | Dead stubs in old DAOs | ✅ Dead code |
-| 14 | Zero test dependencies | ✅ Fixed — JUnit 5, Mockito, TestContainers |
-| 15 | `script.sql` UTF-16LE | ❌ Still open |
+| `MoviehallManagmentController` creates redundant Scene | `MoviehallManagmentController.java` | Remove lines that `new Scene(...)` + `stage.setScene(...)` since embedded via `injectView()` |
+| Sidebar highlight not updated after back | `AdminDashboardController.java` | Add `setActiveMenu(btnDashboard)` in `showDashboard()` |
+| `UserTypePage` both buttons say "Continue as User" | `UserTypePage.java:42` | Change admin button text to "Continue as Admin" |
+
+### Known Issues After Phase 6
+
+| Issue | Severity |
+|---|---|
+| `TicketController` receives empty `bookingIds` — backend OTP flow incomplete | ⚠️ Low |
+| `BookingManagmentPage` "User" column uses callback `"User #" + userId` (no `customerName` in Booking model) | ⚠️ Low |
 
 ---
 
-## 3. AUDIT: script.sql Defects
+## Phase 7: Seed Data & Demo Readiness ✅ (code) / ⬜ (branch merge, final verification)
 
-*(Historical record — all schema defects addressed by Flyway V1 + V2 migrations)*
+**Context:** For demo purposes, the database starts empty (no customers, no movies, no shows). The app needs realistic demo data to showcase all features.
 
-### Naming
-| Issue | Detail |
-|---|---|
-| ✅ Good | snake_case, singular table names, `"user"` quoted (reserved word) |
-| ⚠️ `"user"` quoted | Works but ugly. Alternative: rename to `"account"` or `"customer"`. Leave as-is for now. |
+### 7.1 — V3 Seed Migration (`V3__seed_test_data.sql`)
 
-### Data Types
-| Column | Current | Issue | Fix |
-|---|---|---|---|
-| All `SERIAL` PKs | `INT` | `SERIAL` is `INTEGER` — only 2B rows | `BIGSERIAL` → `BIGINT` for all PKs and FKs |
-| `movie.rating` | `DECIMAL(3,1)` | Max 99.9 — fine for 0–10 scale | Acceptable, but `DECIMAL(2,1)` is more precise |
-| `payment.verification_code` | `VARCHAR(20)` | May be too short for hashes | `VARCHAR(64)` |
-| `booking.movie_name` | `VARCHAR(200)` | Denormalized — duplicates `movie.title` | Accept as read-only denormalization, but add a trigger or app-layer sync |
-| `seat.status` | `VARCHAR(20)` | Magic strings | Consider `VARCHAR(20)` with `CHECK( IN ('available','booked','reserved'))` |
+- 3 users: admin (BCrypt-hashed password), customer, second customer
+- 5 movies (including upcoming showing so the "now showing" filter works)
+- 2 cinema halls
+- Shows spanning past and future dates (demonstrates filtering)
+- Pre-seeded seat grid (40 seats per hall, mix of available/booked)
+- Several completed bookings with associated payments and tickets
+- `ticket_price` column correctly populated on each show
+- Resolves all `script.sql` defects: no duplicate users, no plaintext passwords, no missing `ticket_price`
 
-### Missing Constraints
-| Defect | Detail |
-|---|---|
-| ❌ No `NOT NULL` on `"user".email` | Allows null emails — breaks payment receipts |
-| ❌ No `CHECK` on `"user".role` | `VARCHAR(20)` with no constraint — `'admin'`, `'Admin'`, `'ADMIN'` all valid |
-| ❌ No `CHECK` on `booking.status` | `VARCHAR(50)` — `'pending'`, `'confirmed'`, `'cancelled'`, `'no-show'` should be enforced |
-| ❌ No `CHECK` on `payment.status` | `VARCHAR(20)` — `'pending'`, `'paid'`, `'failed'`, `'refunded'` |
-| ❌ No `CHECK` on `seat.seat_type` | `VARCHAR(30)` — `'regular'`, `'vip'`, `'disabled'` |
-| ❌ No `CHECK` on `hall.hall_type` | `VARCHAR(50)` — `'regular'`, `'vip'`, `'imax'` |
-| ❌ No `updated_at` audit columns | No table has `updated_at TIMESTAMPTZ` |
+### 7.2 — Final CI Pipeline
 
-### Indexes
-| Issue | Detail |
-|---|---|
-| ✅ Good | Indexes on `seat(hall_id)`, `showtime(movie_id/hall_id/date)`, `booking(user_id/show_id/status)` |
-| ⚠️ Missing | `payment(booking_id)` — already covered by `UNIQUE`, but explicit index helps |
-| ⚠️ Missing | `"user"(username)` — already `UNIQUE`, but explicit index for lookup |
-| ⚠️ Missing | `"user"(role)` — for admin filtering |
+- `make ci` confirmed green: `mvn clean verify spotless:check spotbugs:check`
+- All 48 tests pass
+- `make run` / `run-app.sh` start DB + app in one command
+- Docker auto-stops on app exit (via `trap` in `run-app.sh`)
 
-### Seed Data
-| Issue | Detail |
-|---|---|
-| ⚠️ Duplicate users | `hawi123` appears twice (user_id 2 and 3) |
-| ⚠️ Inconsistent IDs | `show_id` values 8–11 but no 1–7 (gap from prior deletes) |
-| ⚠️ Missing `ticket_price` | Showtimes 8–11 insert without `ticket_price` (defaults to 0.00) |
-| ⚠️ Plaintext passwords | All seed passwords stored as plaintext strings |
+**Key file:** `src/main/resources/db/migration/V3__seed_test_data.sql`
 
-### Encoding
-| Issue | Detail |
-|---|---|
-| ❌ UTF-16LE | File is UTF-16LE with BOM — causes tooling issues. Must convert to UTF-8. |
+**Remaining:** Merge Phase 6 → dev, create phase-7 branch, run final `make ci`, merge to master.
 
 ---
 
-## 3.5 PROGRESS TRACKER
+## Git Workflow
 
-### ✅ Completed
+```
+                    ┌──────────┐
+                    │  master  │ ← production-ready, tag on release
+                    └────┬─────┘
+                         │ merge (--no-ff)
+                    ┌────┴─────┐
+                    │   dev    │ ← integration branch
+                    └────┬─────┘
+                         │ merge (--no-ff)
+              ┌──────────┼──────────┐
+              │          │          │
+        ┌─────┴───┐ ┌───┴────┐ ┌───┴────┐
+        │ phase-6 │ │phase-7 │ │  fix/*  │
+        └─────────┘ └────────┘ └────────┘
+```
 
-| Phase | What | Delivered |
+- Feature/phase work on topic branches
+- Merge to `dev` via `--no-ff` for reviewable history
+- `dev` → `master` when `make ci` is green and demo-ready
+- `make ci` = `mvn clean verify spotless:check spotbugs:check` (no PMD)
+- `make run` starts the app; `run-app.sh` starts DB + app + auto-cleanup
+
+---
+
+## Dependency Summary
+
+| Dependency | Version | Purpose |
 |---|---|---|
-| 0 | Testing Foundation | JUnit 5, Mockito, TestContainers, AssertJ. 4 characterization tests + unit tests = 53 total |
-| 1 | Flyway Schema | V1 (exact script.sql copy) + V2 (BIGINT, CHECK, audit cols, indexes). `FlywayMigrator` class |
-| 2 | Domain Extraction | 7 rich domain models (User, Movie, Hall, Seat, Showtime, Booking, Payment, BookingSeat). 7 port interfaces. 3 domain services (AuthService, BookingService, PaymentService). ConnectionProvider + BCryptPasswordHasher |
-| 3 | Repositories + DI | 7 Jdbc repos targeting V2 schema. `AppContext` (DI container). Full controller DI migration (all 21 controllers). `ModelConverter` for old↔new bridging. Password hashing cutover with legacy plaintext compat |
-| 4 | Cleanup (partial) | Theme.java consolidation. Dead code stubs removed from flow. DAO/ package dead in main sources |
+| JUnit 5 | 5.11.4 | Test framework |
+| Mockito | 5.14.2 | Test mocking |
+| TestContainers | 1.20.4 | Integration test DB (not used in CI) |
+| AssertJ | 3.26.3 | Fluent test assertions |
+| Flyway Core | 10.18.2 | Schema migration |
+| BCrypt (jbcrypt) | 0.4 | Password hashing |
+| PostgreSQL driver | 42.7.3 | DB connectivity |
+| HikariCP | 7.0.2 | Connection pooling |
+| Logback | 1.5.34 | Logging |
+| JavaFX | 21.0.2 | UI framework |
+| Spotless Maven | 2.43.0 | Auto-formatting |
+| SpotBugs Maven | 4.8.6.2 | Static analysis |
+| PMD Maven | 3.25.0 | Code quality (manual only) |
 
-### ❌ Remaining
+---
 
-| Item | Priority | Notes |
+## Summary
+
+| Metric | Initial (Pre-Phase 0) | Current (Post-Phase 7) |
 |---|---|---|
-| Push `dev` to remote `master` | P0 | Final deployment step |
-| Update Views to use `domain.model` types | P3 | Delete `ui/model/` after migration |
-| Typo filename: remaining `Managment` → `Management` (6 files) | P2 | Cosmetic — 20+ file changes |
-
----
-
-## 4. TARGET ARCHITECTURE (To-Be)
-
-### Hexagonal / Clean Architecture with Pragmatic Services
-
-```
-src/main/java/
-├── domain/                        ← Innermost — zero framework deps
-│   ├── model/                     ← Rich domain models (behavior + data)
-│   │   ├── User.java              · isAdmin(), isCustomer()
-│   │   ├── Movie.java             · getFormattedDuration()
-│   │   ├── Hall.java              · isVip()
-│   │   ├── Seat.java              · isAvailable(), book(), release()
-│   │   ├── Showtime.java          · isPast(), hasStarted()
-│   │   ├── Booking.java           · confirm(), cancel(), total()
-│   │   ├── BookingSeat.java       · (value object for junction)
-│   │   └── Payment.java           · markPaid(), markFailed(), verifyOtp()
-│   ├── service/                   ← Domain services (orchestration)
-│   │   ├── BookingService.java    · createBooking, cancelBooking, getHistory
-│   │   ├── PaymentService.java    · processPayment, verifyPayment, refund
-│   │   └── AuthService.java       · login, register
-│   └── port/                      ← Outbound port interfaces
-│       ├── UserRepository.java
-│       ├── MovieRepository.java
-│       ├── HallRepository.java
-│       ├── SeatRepository.java
-│       ├── ShowtimeRepository.java
-│       ├── BookingRepository.java
-│       └── PaymentRepository.java
-│
-├── application/                   ← Application layer (orchestration, bridging)
-│   ├── AppContext.java            ← Manual DI container (holds all repos + services)
-│   ├── ModelConverter.java        ← Bidirectional old↔new model conversion
-│   └── service/                   ← Application services (txn management)
-│       └── BookingFacade.java     ← Wraps BookingService + PaymentService + txn (TO DO)
-│
-├── infrastructure/                ← Adapter implementations
-│   ├── persistence/
-│   │   ├── ConnectionProvider.java
-│   │   ├── DatabaseConnectionProvider.java
-│   │   ├── JdbcUserRepository.java
-│   │   ├── JdbcMovieRepository.java
-│   │   ├── JdbcHallRepository.java
-│   │   ├── JdbcSeatRepository.java
-│   │   ├── JdbcShowtimeRepository.java
-│   │   ├── JdbcBookingRepository.java
-│   │   └── JdbcPaymentRepository.java
-│   ├── security/
-│   │   ├── PasswordHasher.java
-│   │   └── BCryptPasswordHasher.java
-│   └── migration/
-│       └── FlywayMigrator.java
-│
-├── ui/                            ← Inbound adapters (JavaFX)
-│   ├── controller/                ← (TO DO: move from Controller/)
-│   ├── view/                      ← (TO DO: move from View/)
-│   ├── common/
-│   │   └── Theme.java             ← Single source for ACCENT, TEXT_DARK, etc.
-│   └── Main.java                  ← Composition Root (TO DO: move from root)
-│
-├── (old packages to delete)
-│   ├── Controller/                → ui/controller/
-│   ├── View/                      → ui/view/
-│   ├── DAO/                       → delete
-│   ├── Database/                  → delete
-│   └── Model/                     → delete (after views adopt new domain models)
-```
-
-### Key Architectural Decisions
-
-| Decision | Rationale |
-|---|---|
-| **Pragmatic Services, not 50 Use-Cases** | `BookingService`, `PaymentService`, `AuthService` — cohesive, not fragmented. |
-| **Rich domain models** | `Booking.confirm()` contains business logic (validates state, fires events). Service calls model methods. |
-| **All repositories have interfaces** | Enables mocking without a database. True dependency inversion. |
-| **`ConnectionProvider` interface** | Static `DatabaseConnection` replaced with injectable interface. Testable. |
-| **Manual DI in Composition Root** (`Main.java`) | Zero framework overhead. Everything wired in one place. |
-| **Consistent `Long` IDs** | No more `Integer.parseInt()`. All PKs are `BIGINT` in DB → `Long` in Java. |
-| **Transactions via `BookingFacade`** | Application service manages the connection/txn lifecycle, passes to domain services. |
-| **ModelConverter as transitional bridge** | Avoids rewriting all View files in one shot. Convert at repo boundaries. |
-| **Controller/View stay in top-level packages** | Moves are cosmetic (package rename, no behavioral change). Planned for Phase 5. |
-
----
-
-## 5. REFACTORING STRATEGY — Execution Phases
-
-```
-Phase 0 ──► Phase 1 ──► Phase 2 ──► Phase 3 ──► Phase 4 ──► Phase 5 ──► Phase 6 ──► Phase 7 ──► Phase 8
-(tests)    (schema)     (domain)    (services)  (cleanup)   (linting)  (reorg)    (txn)      (nav)
-```
-
-### Phase 0: Testing Foundation ✅ DONE
-
-**Goal:** Add test infrastructure and write characterization tests before touching production code.
-
-Delivered: JUnit 5, Mockito, TestContainers, AssertJ, Flyway deps. 53 tests total (4 characterization + 5 service + 21 domain + 3 migration + rest).
-
-**Branch:** `refactor/phase-0-test-foundation`
-
----
-
-### Phase 1: Flyway Schema Setup + Migration ✅ DONE
-
-**Goal:** Establish Flyway, convert `script.sql` to V1, write V2 modernization.
-
-Delivered:
-- `V1__initial_schema.sql` — exact DDL from script.sql (UTF-8, no seed data)
-- `V2__modernize_schema.sql` — BIGINT PKs, CHECK constraints, NOT NULL, audit columns, indexes
-- `FlywayMigrator.java` — auto-migrate on startup
-- `FlywayMigrationTest` — validates both migrations + idempotency
-
-**Branch:** `refactor/phase-1-flyway-schema`
-
----
-
-### Phase 2: Domain Extraction + Rich Models + Repository Interfaces ✅ DONE
-
-**Goal:** Build domain layer with rich models, repository ports, services, ConnectionProvider, PasswordHasher.
-
-Delivered:
-- 8 domain models in `domain/model/` (with behavior)
-- 7 repository interfaces in `domain/port/`
-- 3 domain services in `domain/service/`
-- `ConnectionProvider` + `DatabaseConnectionProvider`
-- `PasswordHasher` + `BCryptPasswordHasher`
-
-**Branch:** `refactor/phase-2-domain-models`
-
----
-
-### Phase 3: Repository Implementations + Controller DI ✅ DONE
-
-**Goal:** Write 7 Jdbc repos, wire DI, migrate all controllers away from old DAOs.
-
-Delivered:
-- 7 Jdbc repositories in `infrastructure/persistence/`
-- `AppContext.java` — DI container holding all 7 repos + 3 services
-- All 21 controllers accept `AppContext` via constructor
-- `ModelConverter` — bidirectional conversion for all 7 entity types
-- `LoginController` + `SignUpController` → `AuthService` (BCrypt, P0 security fix)
-- `PaymentController` → `BookingService.createBooking()` + `PaymentService.processPayment()`
-- Remaining 12 controllers → injected repo calls with `ModelConverter` conversion
-- `ShowManagmentController` — raw JDBC to legacy tables replaced with repo calls
-- `PaymentRepository.findAll()` added for admin dashboard
-- 53 tests pass, main sources have zero `import DAO.*`
-
-**Branch:** `refactor/phase-3-services-orchestration` → merged to `dev`
-
----
-
-### Phase 4: Infrastructure + UI Polish ✅ DONE
-
-**Goal:** Cleanup — Theme, dead stubs, System.out → SLF4J.
-
-#### 4.1 — Consolidate UI Theme ✅
-Single `ui/common/Theme.java` with all constants. Inline duplicates removed.
-
-#### 4.2 — Logger Adoption
-SLF4J loggers present in several controllers. Some `System.out.println()` remain.
-
-#### 4.3 — Dead Stubs
-Old DAO package is dead code in main sources (zero imports). Not yet deleted (tests reference it).
-
-**Remaining:**
-- Remove old Model/types after views update (deferred — views still reference old types)
-
----
-
-### Phase 5: Linting & Formatting ✅ DONE
-
-**Goal:** Enforce code consistency and catch bugs/security issues using Spotless, SpotBugs, and PMD.
-
-#### Tools Added
-
-| Tool | Purpose | Config |
-|---|---|---|
-| **Spotless** | Automatic code formatting | Google AOSP style (4-space indent), removes unused imports, trims whitespace |
-| **SpotBugs** | Bug and security vulnerability detection | Max effort, medium threshold, excludes known JavaFX false positives |
-| **PMD** | Code quality and maintainability checks | bestpractices + errorprone + design rulesets |
-
-#### Commands
-
-```bash
-mvn spotless:check    # Check formatting violations
-mvn spotless:apply    # Auto-fix all formatting violations
-mvn spotbugs:check    # Run bug analysis
-mvn pmd:check         # Run code quality analysis
-```
-
-#### What Was Fixed
-
-- **Spotless:** Auto-formatted 86 files (import ordering, whitespace, line wrapping)
-- **SpotBugs:**
-  - Fixed: `NP_ALWAYS_NULL` — removed dead null-check branch in `PaymentManagmentController.handleBack()` that would NPE
-  - Fixed: `DMI_RANDOM_USED_ONLY_ONCE` — promoted `Random` to a static field in `PaymentController`
-  - Fixed: `UUF_UNUSED_PUBLIC_OR_PROTECTED_FIELD` — removed unused `lblTotalPayments`/`lblPendingPayments` in view
-  - Fixed: `URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD` — removed unused `seatContainer` in `SeatSelectionPage`
-  - Suppressed: `PA_PUBLIC_PRIMITIVE_ATTRIBUTE` (JavaFX idiom), `EI_EXPOSE_REP*` (model types), `URF_UNREAD_FIELD` (lambda captures), `CT_CONSTRUCTOR_THROW` (JavaFX pattern)
-- **PMD:** Zero violations after cleanup — codebase passes bestpractices, errorprone, and design rulesets
-
-#### Files Changed
-- `pom.xml` — added `spotless-maven-plugin`, `spotbugs-maven-plugin`, `maven-pmd-plugin`
-- `spotbugs-exclude.xml` — new file with false-positive exclusions
-- 86 Java files auto-formatted, 4 SpotBugs real bugs fixed, 2 unused view fields removed
-
-#### Portfolio Selling Point
-> Integrated automated linting and formatting to enforce code quality standards, demonstrating professional development practices.
-
----
-
-### Phase 6: Package Reorganization ✅ DONE
-
-**Goal:** Move files to match the target architecture layout. This is purely cosmetic — no behavioral changes. All imports are updated mechanically.
-
-#### 5.1 — Move Controller/ → ui/controller/
-
-**Files to move (21):**
-```
-Controller/WelcomeController.java          → ui/controller/WelcomeController.java
-Controller/AuthChoiceController.java       → ui/controller/AuthChoiceController.java
-Controller/UsertypeController.java         → ui/controller/UsertypeController.java
-Controller/LoginController.java            → ui/controller/LoginController.java
-Controller/SignUpController.java           → ui/controller/SignUpController.java
-Controller/AdminDashboardController.java   → ui/controller/AdminDashboardController.java
-Controller/MovieManagementController.java  → ui/controller/MovieManagementController.java
-Controller/ShowManagmentController.java    → ui/controller/ShowManagmentController.java
-Controller/MoviehallManagmentController.java → ui/controller/MoviehallManagmentController.java
-Controller/SeatManagmentController.java    → ui/controller/SeatManagmentController.java
-Controller/BookingManagmentController.java → ui/controller/BookingManagmentController.java
-Controller/PaymentManagmentController.java → ui/controller/PaymentManagmentController.java
-Controller/UserManagmentController.java    → ui/controller/UserManagmentController.java
-Controller/CustomerDashboardController.java → ui/controller/CustomerDashboardController.java
-Controller/MovieBrowserController.java     → ui/controller/MovieBrowserController.java
-Controller/ShowSelectionController.java    → ui/controller/ShowSelectionController.java
-Controller/MovieHallSelectionController.java → ui/controller/MovieHallSelectionController.java
-Controller/SeatSelectionController.java    → ui/controller/SeatSelectionController.java
-Controller/PaymentController.java          → ui/controller/PaymentController.java
-Controller/TicketController.java           → ui/controller/TicketController.java
-Controller/NavigationManager.java          → ui/controller/NavigationManager.java
-```
-
-**Changes needed per file:**
-- `package Controller;` → `package ui.controller;`
-- Any cross-references to other controllers must use the new package in `import` statements
-- `import View.Xxx` → `import ui.view.Xxx` (after View/ is moved)
-
-#### 5.2 — Move View/ → ui/view/
-
-**Files to move (~21):**
-Same pattern — `package View;` → `package ui.view;`, update imports.
-
-#### 5.3 — Move Main.java → ui/Main.java
-
-**Changes:**
-- `package ui;`
-- Update `pom.xml` javafx-maven-plugin `mainClass` to `ui.Main`
-- Update references (none, it's the entry point)
-
-#### 5.4 — Delete dead packages
-
-| Package | Reason | Risk |
-|---|---|---|
-| `DAO/` | Zero imports from main sources | Low — characterization tests reference DAO classes directly by fully qualified name or via `import DAO.*`. Tests must be updated to use new repo paths, or the DAO package stays in test scope only |
-| `Database/` | `DatabaseConnection.java` unused by main sources | Low — same as DAO; tests may reference it |
-| `Model/` | **Views still reference these.** Can only delete after Phase 5.5 | High — will break compile |
-
-#### 5.5 — Update Views to use domain.models (optional, large effort)
-
-Instead of converting old→new on every controller call, update the View files to reference `domain.model.*` directly. This lets us delete the `Model/` package entirely.
-
-**Mechanical change:** Each `import Model.Movie;` → `import domain.model.Movie;`, update getter calls (`getMovieID()` → `getMovieId()`, etc.). This touches every View file and every Controller that passes models to views.
-
-**Effort estimate:** ~20 View files × ~5-10 getter renames each. 1-2 hours of mechanical work.
-
-#### 5.6 — Fix typo filename
-
-`MovieManagmentContrller.java` → `MovieManagementController.java`
-Update all references in imports and usages.
-
-#### 5.7 — Convert/delete script.sql
-
-Either convert from UTF-16LE to UTF-8 and keep as reference, or delete it (Flyway migrations are source of truth).
-
-#### 5.8 — Testing strategy
-
-- `mvn clean compile` — must succeed with zero warnings
-- All 53 tests must pass
-- Manual: `mvn javafx:run` — app must start, all screens render
-
-**Breaking change?** YES — all imports change. Controllers in new package. Full regression test required.
-
-**Branch:** `refactor/phase-5-reorg`
-
----
-
-### Phase 7: Transaction Safety (BookingFacade) ✅ DONE
-
-**Goal:** Eliminate orphan bookings when payment fails after booking succeeds.
-
-#### The Problem
-
-`PaymentController` calls:
-```java
-ctx.bookingService.createBooking(...);   // opens connection A, inserts booking
-ctx.paymentService.processPayment(...);  // opens connection B, inserts payment
-```
-
-If connection B fails after connection A commits, there's an orphan booking with no payment.
-
-#### The Fix: BookingFacade
-
-**New file:** `application/service/BookingFacade.java`
-
-Shares a single JDBC connection across both operations and commits/rolls back atomically:
-
-```java
-public class BookingFacade {
-    private final BookingService bookingService;
-    private final PaymentService paymentService;
-    private final ConnectionProvider connectionProvider;
-
-    public BookingResult createBookingWithPayment(Long userId, Long showId,
-            List<Long> seatIds, String paymentMethod) {
-        Connection conn = connectionProvider.getConnection();
-        try {
-            conn.setAutoCommit(false);
-            // pass the shared connection to both services (or make repos accept a connection arg)
-            Booking booking = bookingService.createBooking(userId, showId, seatIds, ...);
-            Payment payment = paymentService.processPayment(booking.getBookingId(), ...);
-            conn.commit();
-            return new BookingResult(booking, payment);
-        } catch (Exception e) {
-            conn.rollback();
-            throw e;
-        } finally {
-            conn.setAutoCommit(true);
-            conn.close();
-        }
-    }
-}
-```
-
-**Challenges:**
-- Current `BookingService` and `PaymentService` don't accept a connection parameter
-- Repositories get connections from `ConnectionProvider` internally
-- Options:
-  a. Add `Connection` parameter to service/repo methods (invasive)
-  b. Add `beginTransaction()` / `commit()` / `rollback()` to `ConnectionProvider` (simpler)
-  c. Create a `TransactionTemplate` callback pattern (cleanest but more code)
-
-#### Testing strategy:
-- TestContainers test: call `BookingFacade.createBookingWithPayment()`, verify both booking and payment rows exist
-- Simulate payment failure: verify booking is rolled back
-
-**Breaking change?** NO — new class added, existing code only needs to use it instead of calling services separately. Old call path still works (no transaction safety).
-
-**Branch:** `refactor/phase-6-txn`
-
----
-
-### Phase 8: Navigation Refactor ✅ DONE
-
-**Goal:** Replace `new NextController(stage, ctx, ...)` chaining with a screen navigation service.
-
-#### The Problem
-
-Every screen transition:
-```java
-view.btnBack.setOnAction(e -> new CustomerDashboardController(stage, ctx, currentUser));
-view.movieCard.setOnMouseClicked(e -> new ShowSelectionController(stage, ctx, currentUser, movie));
-```
-
-This creates tight coupling between controllers and makes it impossible to test navigation logic.
-
-#### The Fix: NavigationService
-
-**New file:** `ui/controller/NavigationService.java` (or integrate into existing `NavigationManager`)
-
-```java
-public class NavigationService {
-    private final Stage stage;
-    private final AppContext ctx;
-    private final Deque<BiFunction<Stage, AppContext, ?>> history = new ArrayDeque<>();
-
-    public void navigateTo(BiFunction<Stage, AppContext, Object> screenFactory) {
-        history.push(screenFactory);
-        screenFactory.apply(stage, ctx);
-    }
-
-    public void back() {
-        history.pop();
-        if (!history.isEmpty()) {
-            history.peek().apply(stage, ctx);
-        }
-    }
-
-    // Named navigation methods
-    public void toWelcome() { navigateTo(WelcomeController::new); }
-    public void toLogin() { navigateTo(LoginController::new); }
-    public void toDashboard(Customer customer) {
-        navigateTo((stage, ctx) -> new CustomerDashboardController(stage, ctx, customer));
-    }
-}
-```
-
-Controllers would accept `NavigationService` instead of `Stage` directly. The pattern becomes:
-```java
-// Before:
-new ShowSelectionController(stage, ctx, currentUser, movie);
-
-// After:
-nav.toShowSelection(currentUser, movie);
-```
-
-#### Testing strategy:
-- Unit test `NavigationService` with mock screen factories
-- Verify back-stack behavior (push, pop, empty)
-- Controllers become testable with mocked navigation
-
-**Breaking change?** YES — every controller constructor changes (add `NavigationService` param). All 21 call sites updated.
-
-**Branch:** `refactor/phase-7-nav`
-
----
-
-## 6. DEPENDENCY UPGRADE SUMMARY (pom.xml)
-
-| Dependency | Current | Target | Phase |
-|---|---|---|---|
-| JUnit 5 | 5.11.4 | stay | 0 |
-| Mockito | 5.14.2 | stay | 0 |
-| TestContainers | 1.20.4 | stay | 0 |
-| AssertJ | 3.26.3 | stay | 0 |
-| Flyway Core | 10.18.2 | stay | 1 |
-| Flyway Postgres | 10.18.2 | stay | 1 |
-| Flyway Maven Plugin | 10.18.2 | stay | 1 |
-| BCrypt (jbcrypt) | 0.4 | stay | 2 |
-| PostgreSQL driver | 42.7.3 | stay | — |
-| HikariCP | 7.0.2 | stay | — |
-| Logback | 1.5.34 | stay | — |
-| JavaFX | 21.0.2 | stay | — |
-| Maven Compiler | 3.13.0 | stay | — |
-| Spotless Maven | 2.43.0 | stay | 5 |
-| SpotBugs Maven | 4.8.6.2 | stay | 5 |
-| PMD Maven | 3.21.0 | stay | 5 |
-
----
-
-## 6.5 Git Workflow Rules
-
-After each phase is fully completed and all tests pass:
-1. Create feature branch from `dev`: `git checkout dev && git checkout -b refactor/phase-N-desc`
-2. Make changes, commit with descriptive messages
-3. Run full test suite: `mvn clean test`
-4. Merge back to `dev` with `--no-ff`: `git checkout dev && git merge --no-ff refactor/phase-N-desc`
-5. Delete feature branch: `git branch -d refactor/phase-N-desc`
-
-- Do **NOT** push to `main` or `master`.
-- Do **NOT** force-push (`--force`) without explicit approval.
-- Only push `master` to remote when stable.
-
----
-
-## 7. EXECUTION ORDER
-
-```
-Phase 0 ──► Phase 1 ──► Phase 2 ──► Phase 3 ──► Phase 4 ──► Phase 5 ──► Phase 6 ──► Phase 7 ──► Phase 8
-(tests)    (schema)     (domain)    (services)  (cleanup)   (reorg)    (txn)      (nav)
-```
-
-### Why this order
-
-1. **Phase 0–4:** Completed. See Section 3.5 for details.
-2. **Phase 5 (Linting):** Code quality automation — Spotless, SpotBugs, PMD added to build pipeline. Zero behavioral change.
-3. **Phase 6 (Reorg):** Pure mechanical work — package moves, import updates, no behavioral change.
-4. **Phase 7 (Txn):** Critical data-integrity fix — BookingFacade with atomic booking+payment.
-5. **Phase 8 (Nav):** Largest API change — instance-based NavigationManager replaces static stack.
-
-### Deployment Risk
-
-| Phase | Deployable? | Risk |
-|---|---|---|
-| 0–4 | ✅ | All tested, merged to dev |
-| 5 | ✅ | Spotless auto-format, SpotBugs/PMD clean. 38 tests pass |
-| 6 | ✅ | Pure file moves + import changes. Full recompile + regression test |
-| 7 | ⚠️ Moderate | New BookingFacade — no existing code changes, but txn rollback could mask bugs |
-| 8 | ⚠️ Moderate | All controller constructors change — must test every screen transition |
-
----
-
-## 8. SUMMARY
-
-| Metric | Initial (Pre-Phase 0) | Current (Post-Phase 3) | Target (End of Phase 7) |
-|---|---|---|---|
-| Architecture | Transaction Script | Hybrid (old UI + new core) | Hexagonal + Pragmatic Services |
-| Package structure | `Controller/`, `DAO/`, `Model/`, `View/`, `Database/` | Same + `domain/`, `application/`, `infrastructure/`, `ui/common/` | `domain/`, `application/`, `infrastructure/`, `ui/` (old pkgs deleted) |
-| Test coverage | 0% | ~40% | >80% (unit + integration) |
-| Password storage | Plaintext | BCrypt | BCrypt |
-| Transaction safety | None | None (services called separately) | `BookingFacade` with shared connection |
-| Schema management | Manual `script.sql` | Flyway (V1 + V2) | Flyway (V1 + V2) |
-| Schema alignment | Broken (code ≠ schema) | Fully aligned (DAOs dead, new repos target Flyway) | Fully aligned |
-| ID types | Mixed `int`/`String` | Domain: Long. Views: old mixed types (bridged by ModelConverter) | Consistent `Long` everywhere |
-| Controller size | 50–300 lines | 50–300 lines (still fat, esp. PaymentController) | 15–40 lines (thin delegation to services) |
-| DI pattern | `new Xxx()` everywhere | Constructor injection via `AppContext` | Constructor injection via `AppContext` |
-| Navigation | Static stack + direct instantiation | Same (still `new NextController()`) | `NavigationService` (testable) |
+| Architecture | Transaction Script | Hexagonal + Pragmatic Services |
+| Package structure | `Controller/`, `DAO/`, `Model/`, `View/`, `Database/` | `domain/`, `application/`, `infrastructure/`, `ui/` |
+| Test coverage | 0% | 48 tests (5 files) |
+| Password storage | Plaintext | BCrypt |
+| Transaction safety | None | `BookingFacade` with atomic txn |
+| Schema management | Manual `script.sql` | Flyway (V1 + V2 + V3) |
+| Inline styling (`setStyle`) | ~147 calls | 0 |
+| Inline fonts (`setFont`/`setTextFill`) | ~223 calls | 5 (intentional) |
+| CSS classes | None | 85 classes, ~600 lines |
+| Window management | 8 unique sizes, no centering | `WindowManager` — centralized, centered, fixed 1200×800 |
+| Sidebar | Admin only, inline | Reusable `Sidebar.java` in Admin + Customer |
+| Table SelectionMode.SINGLE | Not set | 7/7 tables |
+| Table PropertyValueFactory | 9 broken refs | 0 broken refs |
+| Navigation | Static stack + direct instantiation | Instance-based `NavigationManager` |
+| CI pipeline | None | `make ci` (verify + spotless + spotbugs) |
+| Demo data | None | V3 seed (3 users, 5 movies, 2 halls, past/future shows) |
+| Docker automation | None | `run-app.sh` — auto-start/stop DB |
